--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,5 +7,11 @@
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always"
         />
+    <item android:id="@+id/action_menu_main_upload"
+        android:title="@string/nav_upload"
+        android:icon="@drawable/ic_action_upload"
+        android:orderInCategory="2"
+        app:showAsAction="always"
+        />
     <!--android:icon="@drawable/ic_action_search"-->
 </menu>
