--- a/app/src/main/res/layout/activity_upload_celebrity.xml
+++ b/app/src/main/res/layout/activity_upload_celebrity.xml
@@ -454,8 +454,10 @@
             android:drawableStart="@mipmap/ic_add_circle"
             android:drawableLeft="@mipmap/ic_add_circle"
             android:gravity="center_vertical"
+            android:layout_marginBottom="30dp"
             app:layout_constraintStart_toEndOf="@id/ic_description"
             app:layout_constraintTop_toBottomOf="@+id/tv_description"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
