--- a/app/src/main/res/layout/span_video.xml
+++ b/app/src/main/res/layout/span_video.xml
@@ -9,6 +9,5 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:src="@mipmap/ic_pause"
-        android:id="@+id/iv_span_play"
-        android:visibility="gone"/>
+        android:id="@+id/iv_span_play" />
 </FrameLayout>
