直接从系统获取视频缩略图的解决方案还是没有找到

--- a/app/src/main/res/layout/span_video.xml
+++ b/app/src/main/res/layout/span_video.xml
@@ -9,5 +9,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:src="@mipmap/ic_pause"
-        android:id="@+id/iv_span_play" />
+        android:id="@+id/iv_span_play"
+        android:visibility="gone"/>
 </FrameLayout>
