获取video缩略图。

--- a/app/src/main/res/layout/span_video.xml
+++ b/app/src/main/res/layout/span_video.xml
@@ -8,7 +8,6 @@
     <ImageView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@mipmap/ic_pause"
-        android:id="@+id/iv_span_play"
-        android:visibility="gone"/>
+        android:src="@drawable/ic_video_play"
+        android:id="@+id/iv_span_play"/>
 </FrameLayout>
