--- a/app/src/main/res/layout/activity_edit_events.xml
+++ b/app/src/main/res/layout/activity_edit_events.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -31,7 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_upload_edit_events" />
 
-    <EditText
+    <com.zou.graytrace.Utils.RichEditText
         android:id="@+id/et_event_content"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -44,7 +45,7 @@
         android:textSize="14dp"
         android:background="@null"
         android:padding="5dp"
-        app:layout_constraintBottom_toBottomOf="@+id/cl_bottom_view"
+        app:layout_constraintBottom_toTopOf="@+id/cl_bottom_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_event_title" />
