--- a/app/src/main/res/layout/activity_edit_events.xml
+++ b/app/src/main/res/layout/activity_edit_events.xml
@@ -38,11 +38,13 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:id="@+id/scrollView_event_content"
+        android:focusableInTouchMode="true"
+        android:focusable="true"
         app:layout_constraintBottom_toTopOf="@+id/cl_bottom_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_event_title">
-        <com.zou.graytrace.Utils.RichEditText
+        <com.zou.graytrace.view.EditTextPlus
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:id="@+id/et_event_content"
