--- a/app/src/main/res/layout/activity_edit_events.xml
+++ b/app/src/main/res/layout/activity_edit_events.xml
@@ -31,29 +31,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_upload_edit_events" />
-    <ScrollView android:layout_width="0dp"
+    <com.zou.graytrace.view.EditTextPlus
         android:layout_height="0dp"
+        android:layout_width="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:id="@+id/scrollView_event_content"
-        android:focusableInTouchMode="true"
-        android:focusable="true"
+        android:id="@+id/et_event_content"
+        android:gravity="top"
+        android:hint="@string/hint_event_content"
+        android:textSize="14dp"
+        android:background="@null"
+        android:padding="5dp"
         app:layout_constraintBottom_toTopOf="@+id/cl_bottom_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_event_title">
-        <com.zou.graytrace.view.EditTextPlus
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            android:id="@+id/et_event_content"
-            android:gravity="top"
-            android:hint="@string/hint_event_content"
-            android:textSize="14dp"
-            android:background="@null"
-            android:padding="5dp" />
-    </ScrollView>
+        app:layout_constraintTop_toBottomOf="@+id/et_event_title"/>
     <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         xmlns:app="http://schemas.android.com/apk/res-auto"
