--- a/app/src/main/res/layout/activity_edit_description.xml
+++ b/app/src/main/res/layout/activity_edit_description.xml
@@ -1,36 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_upload_edit_events"
+        android:id="@+id/toolbar_edit_description"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat"
-        app:title="@string/add_events"
+        app:title="@string/edit_description"
         app:navigationIcon="@drawable/ic_action_close"/>
-
-    <EditText
-        android:id="@+id/et_event_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:hint="@string/hint_event_title"
-        android:lines="1"
-        android:imeOptions="actionNext"
-        android:nextFocusDown="@+id/et_event_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_upload_edit_events" />
     <com.zou.graytrace.view.EditTextPlus
         android:layout_height="0dp"
         android:layout_width="0dp"
@@ -38,16 +19,16 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:id="@+id/et_event_content"
+        android:id="@+id/et_description_content"
         android:gravity="top"
-        android:hint="@string/hint_event_content"
+        android:hint="@string/hint_description_content"
         android:textSize="14dp"
         android:background="@null"
         android:padding="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/cl_event_bottom_view"
+        app:layout_constraintBottom_toTopOf="@+id/cl_description_bottom_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_event_title"/>
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_edit_description"/>
     <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -55,7 +36,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:background="?attr/colorPrimary"
-        android:id="@+id/cl_event_bottom_view">
+        android:id="@+id/cl_description_bottom_view">
         <ImageView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_video"
@@ -64,13 +45,13 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginEnd="32dp"
             android:layout_marginRight="32dp"
-            android:id="@+id/iv_event_add_video"/>
+            android:id="@+id/iv_description_add_video"/>
         <ImageView
-            android:id="@+id/iv_event_add_image"
+            android:id="@+id/iv_description_add_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_image"
-            app:layout_constraintEnd_toStartOf="@+id/iv_event_add_video"
+            app:layout_constraintEnd_toStartOf="@+id/iv_description_add_video"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginEnd="32dp"
