--- a/app/src/main/res/layout/activity_upload_celebrity.xml
+++ b/app/src/main/res/layout/activity_upload_celebrity.xml
@@ -405,21 +405,27 @@
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout_motto"
             />
 
-        <TextView android:id="@+id/tv_add_events"
-            android:layout_width="wrap_content"
+        <com.zou.graytrace.view.TextViewContainer
+            android:id="@+id/ll_tv_events"
+            android:layout_width="0dp"
+            app:layout_constraintHorizontal_weight="1"
             android:layout_height="wrap_content"
-            android:text="@string/add_events"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
-            android:drawablePadding="2dp"
-            android:textColor="#2196F3"
-            android:drawableStart="@mipmap/ic_add_circle"
-            android:drawableLeft="@mipmap/ic_add_circle"
-            android:gravity="center_vertical"
             app:layout_constraintStart_toEndOf="@id/ic_motto"
             app:layout_constraintTop_toBottomOf="@+id/tv_events"
-            />
+            android:orientation="horizontal">
+            <TextView android:id="@+id/tv_add_events"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/add_events"
+                android:drawablePadding="2dp"
+                android:textColor="#2196F3"
+                android:drawableStart="@mipmap/ic_add_circle"
+                android:drawableLeft="@mipmap/ic_add_circle"
+                android:gravity="center_vertical" />
+        </com.zou.graytrace.view.TextViewContainer>
 
         <ImageView android:id="@+id/ic_description"
             android:layout_width="wrap_content"
@@ -429,7 +435,7 @@
             android:layout_marginTop="30dp"
             android:src="@drawable/ic_descripition"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_add_events"/>
+            app:layout_constraintTop_toBottomOf="@+id/ll_tv_events"/>
 
         <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -438,7 +444,7 @@
             android:layout_marginTop="20dp"
             android:textSize="12dp"
             app:layout_constraintStart_toEndOf="@id/ic_description"
-            app:layout_constraintTop_toBottomOf="@+id/tv_add_events"
+            app:layout_constraintTop_toBottomOf="@+id/ll_tv_events"
             android:text="@string/description"
             android:id="@+id/tv_description"/>
 
