--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_login"
         android:layout_marginTop="10dp"
-        android:textColor="#ffffff"
         android:textSize="22dp"
         android:id="@+id/tv_login_welcome"/>
 
@@ -85,8 +84,8 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="@string/login"
-        android:textColor="#ffffff"
         android:textSize="18dp"
+        android:background="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout_password"
