--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -17,32 +17,12 @@
             android:layout_height="wrap_content"
             android:text="@string/mine"
             android:layout_gravity="center"
-            android:textColor="#ffffff"
             android:textSize="18dp"
             android:id="@+id/toolbar_title" />
     </android.support.v7.widget.Toolbar>
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="130dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_mine"
-        android:id="@+id/cardView_Login">
-        <ImageView android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="30dp"
-            android:src="@mipmap/bg_login"/>
-        <TextView android:layout_width="150dp"
-            android:layout_height="56dp"
-            android:textColor="#ffffff"
-            android:layout_marginLeft="10dp"
-            android:textSize="16dp"
-            android:layout_gravity="center"
-            android:text="@string/login_register"
-            android:gravity="center"
-            android:background="@drawable/shape_btn_cover_mine"/>
-    </android.support.v7.widget.CardView>
+    <include layout="@layout/fragment_mine_login"
+        android:visibility="gone"/>
+
+    <include layout="@layout/fragment_mine_unlogin" />
 </android.support.constraint.ConstraintLayout>
