--- a/app/src/main/res/layout/fragment_mine_login.xml
+++ b/app/src/main/res/layout/fragment_mine_login.xml
@@ -61,7 +61,8 @@
             <RelativeLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="8dp"
-                android:paddingBottom="8dp">
+                android:paddingBottom="8dp"
+                android:id="@+id/rl_mine_creation">
                 <ImageView android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_creation"
@@ -77,6 +78,12 @@
                     android:layout_marginLeft="8dp"
                     android:textSize="14dp"
                     />
+                <TextView android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="8dp"
+                    android:id="@+id/tv_draft_count"/>
             </RelativeLayout>
             <View android:layout_width="match_parent"
                 android:layout_height="0.5dp"
@@ -85,7 +92,8 @@
             <RelativeLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="8dp"
-                android:paddingBottom="8dp">
+                android:paddingBottom="8dp"
+                android:id="@+id/rl_mine_collection">
                 <ImageView android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_star"
@@ -109,7 +117,8 @@
             <RelativeLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="8dp"
-                android:paddingBottom="8dp">
+                android:paddingBottom="8dp"
+                android:id="@+id/rl_mine_care">
                 <ImageView android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_care"
