--- a/app/src/main/res/layout/item_creation_people.xml
+++ b/app/src/main/res/layout/item_creation_people.xml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <TextView android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_item_creation_people_title"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="人物：测试标题"/>
-    <TextView android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_item_creation_people_content"
-        app:layout_constraintTop_toBottomOf="@+id/tv_item_creation_people_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="测试内容测试内容测试内容测试内容测试内容"/>
-    <ImageView android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/iv_item_creation_people_cover"
-        app:layout_constraintTop_toBottomOf="@+id/tv_item_creation_people_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-</android.support.constraint.ConstraintLayout>
+<android.support.v7.widget.CardView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardUseCompatPadding="true">
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_item_creation_people_title"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="22dp"
+            android:text="人物：测试标题"/>
+        <TextView android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_item_creation_people_content"
+            app:layout_constraintTop_toBottomOf="@+id/tv_item_creation_people_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="测试内容测试内容测试内容测试内容测试内容"/>
+        <ImageView android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/iv_item_creation_people_cover"
+            app:layout_constraintTop_toBottomOf="@+id/tv_item_creation_people_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+    </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
