--- a/app/src/main/res/layout/item_creation_people.xml
+++ b/app/src/main/res/layout/item_creation_people.xml
@@ -24,6 +24,7 @@
             android:text="测试内容测试内容测试内容测试内容测试内容"/>
         <ImageView android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:scaleType="center"
             android:id="@+id/iv_item_creation_people_cover"
             app:layout_constraintTop_toBottomOf="@+id/tv_item_creation_people_content"
             app:layout_constraintStart_toStartOf="parent"
