我的创作->编辑人物 不能进入草稿，逻辑重构，还有描述部分没有重构完成。

--- a/app/src/main/res/layout/activity_people.xml
+++ b/app/src/main/res/layout/activity_people.xml
@@ -35,6 +35,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv_people_name"/>
         <com.zou.graytrace.view.TextViewPeopleContainer android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textViewPeopleContainer"/>
+            android:id="@+id/textViewPeopleContainer"
+            app:layout_constraintTop_toBottomOf="@id/tv_people_description"/>
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
