--- a/app/src/main/res/layout/activity_people.xml
+++ b/app/src/main/res/layout/activity_people.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:scrollbars="none">
-    <android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        android:id="@+id/app_bar_layout">
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar_people"
             android:layout_width="match_parent"
@@ -14,28 +16,83 @@
             android:background="?attr/colorPrimary"
             app:title="@string/nav_people"
             app:popupTheme="@style/ThemeOverlay.AppCompat"
-            app:layout_constraintTop_toTopOf="parent"/>
-        <ImageView
-            app:layout_constraintTop_toBottomOf="@id/toolbar_people"
-            android:id="@+id/iv_people_cover"
+            app:layout_scrollFlags="scroll|enterAlways"/>
+    </android.support.design.widget.AppBarLayout>
+    <android.support.v7.widget.CardView android:layout_width="match_parent"
+        android:layout_gravity="bottom"
+        android:layout_height="48dp"
+        app:cardElevation="@dimen/cardview_default_elevation"
+        android:fitsSystemWindows="true"
+        app:layout_behavior="@string/behavior_footer" >
+        <RelativeLayout android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout android:layout_width="64dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_alignParentRight="true"
+                android:id="@+id/ll_chat"
+                android:layout_alignParentEnd="true">
+                <ImageView android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/ic_talk"/>
+                <TextView android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="13dp"
+                    android:text="22"/>
+            </LinearLayout>
+            <LinearLayout android:layout_width="64dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:id="@+id/ll_collection"
+                android:layout_toLeftOf="@+id/ll_chat"
+                android:layout_toStartOf="@+id/ll_chat">
+                <ImageView android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/ic_collection"/>
+                <TextView android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="13dp"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/collection"/>
+            </LinearLayout>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+    <android.support.v4.widget.NestedScrollView android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:scrollbars="none">
+        <android.support.constraint.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:background="@color/colorAccent"
-            android:layout_gravity="bottom|center_horizontal"
-            android:scaleType="center"
-            />
-        <TextView android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_people_name"
-            android:textSize="22dp"
-            app:layout_constraintTop_toBottomOf="@id/iv_people_cover"/>
-        <TextView android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/tv_people_description"
-            app:layout_constraintTop_toBottomOf="@id/tv_people_name"/>
-        <com.zou.graytrace.view.TextViewPeopleContainer android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textViewPeopleContainer"
-            app:layout_constraintTop_toBottomOf="@id/tv_people_description"/>
-    </android.support.constraint.ConstraintLayout>
-</ScrollView>
+            android:layout_height="match_parent"
+            >
+            <ImageView
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                android:id="@+id/iv_people_cover"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:background="@color/colorAccent"
+                android:layout_gravity="bottom|center_horizontal"
+                android:scaleType="center"
+                />
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_people_name"
+                android:textSize="22dp"
+                app:layout_constraintTop_toBottomOf="@id/iv_people_cover"/>
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_people_description"
+                app:layout_constraintTop_toBottomOf="@id/tv_people_name"/>
+            <com.zou.graytrace.view.TextViewPeopleContainer android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewPeopleContainer"
+                app:layout_constraintTop_toBottomOf="@id/tv_people_description"/>
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v4.widget.NestedScrollView>
+</android.support.design.widget.CoordinatorLayout>
