--- a/app/src/main/res/layout/activity_people.xml
+++ b/app/src/main/res/layout/activity_people.xml
@@ -29,6 +29,20 @@
             <LinearLayout android:layout_width="64dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+                android:id="@+id/ll_reputation">
+                <ImageView android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/ic_flower"/>
+                <TextView android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="13dp"
+                    android:text="0"/>
+            </LinearLayout>
+            <LinearLayout android:layout_width="64dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
                 android:layout_alignParentRight="true"
                 android:id="@+id/ll_chat"
                 android:layout_alignParentEnd="true">
