--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -22,13 +22,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintBottom_toTopOf="@+id/ll_commit_comment"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_comment" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/ll_commit_comment"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:orientation="horizontal"
