--- a/app/src/main/res/layout/activity_people.xml
+++ b/app/src/main/res/layout/activity_people.xml
@@ -99,7 +99,7 @@
                 android:id="@+id/tv_people_name"
                 android:textSize="22dp"
                 app:layout_constraintTop_toBottomOf="@id/iv_people_cover"/>
-            <TextView android:layout_width="wrap_content"
+            <com.zou.graytrace.view.RichTextViewContainer android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tv_people_description"
                 app:layout_constraintTop_toBottomOf="@id/tv_people_name"/>
